Remove old format code

--- a/idefix-config.cfg
+++ b/idefix-config.cfg
@@ -6,4 +6,8 @@ login = webmaster@idefix64.fr
 pass =
 mode = dev
 
-[ports]
+[remote]
+server = ftp.online.net
+login = idefix64_dev@idefix64.fr
+pass = Y692R%meh&
+mode = local
