--- a/idefix-config.cfg
+++ b/idefix-config.cfg
@@ -1,13 +1,12 @@
-﻿# ne pas effacer cette ligne
-
 [dev]
 server = ftp.online.net
-login = webmaster@idefix64.fr
-pass =
+login = webmaster@idefix64.frx
+pass = 
 mode = dev
 
 [remote]
 server = ftp.online.net
 login = idefix64_dev@idefix64.fr
-pass = Y692R%meh&
+pass =
 mode = local
+
