--- a/idefix-config.cfg
+++ b/idefix-config.cfg
@@ -7,6 +7,6 @@ mode = dev
 [remote]
 server = ftp.online.net
 login = idefix64_dev@idefix64.fr
-pass =
+pass = $aes$8def2cb8f5a10266420dc1002848b219
 mode = local
 
