--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install wheel
-        pip install flake8 pytest stdeb PyGObject
+        pip install flake8 pytest stdeb 
+        pip install PyGObject
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
