--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install wheel
         pip install flake8 pytest stdeb 
+        pip install libgirepository1.0-dev
         pip install pygobject
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
