--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,18 +22,19 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        sudo apt-get install libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-3.0 --yes
         python -m pip install --upgrade pip
         pip install wheel
-        pip install flake8 pytest stdeb 
+        pip install flake8 pytest stdeb
         pip install PyGObject
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --builtins="_,xrange"   ==> this causes too many F821 (undefined) errors.
-        flake8 . --count --select=E9,F63,F7 --show-source --statistics 
+        flake8 . --count --select=E9,F63,F7 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest confix.py
+    # - name: Test with pytest
+    #  run: |
+    #    pytest confix.py
