fix: dns_filtering values were using the name of the dns service

--- a/defaults/option_values.ini
+++ b/defaults/option_values.ini
@@ -13,13 +13,13 @@ name = OpenDNS
 ns1 = 208.67.222.222
 ns2 = 208.67.222.220
 
-[dns:Autre]
-name = Autre
+[dns:none]
+name = None
 ns1 =
 ns2 =
 
-[dns:Aucun]
-name = Aucun
+[dns:other]
+name = Other
 ns1 = 1.1.1.1
 ns2 = 8.8.8.8
 
