fix: change automatic to auto for dns options and add other to ddclient options

--- a/defaults/option_values.ini
+++ b/defaults/option_values.ini
@@ -1,4 +1,4 @@
-[dns:automatic]
+[dns:auto]
 name = Automatic
 ns1 =
 ns2 =
@@ -53,3 +53,9 @@ name = None
 server =
 web =
 protocol =
+
+[ddclient:other]
+name = Other
+server =
+web =
+protocol = dyndns2
