--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,9 @@ jobs:
         pip install wheel
         pip install flake8 pytest stdeb
         pip install PyGObject
+        pip install make-deb
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -38,3 +40,6 @@ jobs:
     # - name: Test with pytest
     #  run: |
     #    pytest confix.py
+    - name: Create deb package
+      run: |
+        make-deb
