--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,8 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
+# Confix
+
 name: Python application
 
 on:
@@ -41,8 +43,9 @@ jobs:
     # - name: Test with pytest
     #  run: |
     #    pytest confix.py
-    - name: Create deb package
+    - name: Create package
       run: |        
+        python build.py
         ls -lR ./ > lsdebian.txt
         python setup.py --command-packages=stdeb.command bdist_deb
         
