--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -61,4 +61,5 @@ jobs:
       uses: actions/upload-artifact@v2      
       with:
         name: deb 
-        path: deb_dist
+        path: lsdebian.txt
+        
