--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,12 +28,13 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install wheel
         python -m pip install flake8 pytest         
-        #python -m pip install stdeb debhelper python3-all
-        #python -m pip install rpm alien 
-        #python -m pip install pyinstaller 
+        python -m pip install stdeb debhelper 
+        python -m pip install rpm alien 
+        python -m pip install pyinstaller 
+        python -m pip install python3-all
+        
         python -m pip install PyGObject
-        pip install make-deb
-        #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
     - name: Lint with flake8
       run: |
@@ -46,8 +47,8 @@ jobs:
     #  run: |
     #    pytest confix.py
     - name: Create package
-      run: |       
-        make-deb      
+      run: |      
+        alien      
         python build.py
         ls -lR ./ > lsdebian.txt
         #python setup.py --command-packages=stdeb.command bdist_deb
