--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,7 @@ jobs:
         python -m pip install stdeb debhelper 
         python -m pip install rpm alien 
         python -m pip install pyinstaller 
-        python -m pip install python3-all
+        #python -m pip install python3-all
         
         python -m pip install PyGObject
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
