--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,11 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install wheel
         python -m pip install flake8 pytest         
-        python -m pip install stdeb debhelper 
+        sudo apt-get install stdeb debhelper python3-all
         python -m pip install rpm alien 
-        python -m pip install pyinstaller 
-        sudo apt-get install python3-all
-        
+        python -m pip install pyinstaller                  
         python -m pip install PyGObject
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
