--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,21 +24,33 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run: |
-       
+        sudo apt-get install libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-3.0 --yes
+        python -m pip install --upgrade pip
         python -m pip install wheel
-        
+        python -m pip install flake8 pytest    
+        python -m pip install stdeb       
+        sudo apt-get install  debhelper python3-all
         python -m pip install rpm alien 
+        python -m pip install pyinstaller                  
+        python -m pip install PyGObject
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
-        
- 
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --builtins="_,xrange"   ==> this causes too many F821 (undefined) errors.
+        ## flake8 . --count --builtins="_,xrange" --select=E9,F63,F7 --show-source --statistics  
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        ## flake8 . --count --builtins="_,xrange" --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    # - name: Test with pytest
+    #  run: |
+    #    pytest confix.py
     - name: Create package
       run: |      
-       
-       
-        /usr/bin/alien      
-        
-        ls -lR /usr/bin > lsdebian.txt
-        
+        # sudo alien      
+        python build.py
+        ls -lR ./ > lsdebian.txt
+        python setup.py --command-packages=stdeb.command bdist_deb
         
     - name: builds 1
       uses: actions/upload-artifact@v2
