--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,22 +18,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
+    #- name: Set up Python 3.7
+    #  uses: actions/setup-python@v2
+    #  with:
+    #    python-version: 3.7
     - name: Install dependencies
       run: |
-        sudo apt-get install libgirepository1.0-dev gcc libcairo2-dev pkg-config python3-dev gir1.2-gtk-3.0 dh-python --yes
-        python -m pip install --upgrade pip
-        python -m pip install wheel
-        python -m pip install flake8 pytest
-        python -m pip install stdeb
-        sudo apt-get install  debhelper python3-all
-        python -m pip install rpm alien
-        python -m pip install pyinstaller
-        python -m pip install PyGObject
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        sudo apt install -y python3 python3-dev python3-pip python3-venv python3-all \
+            dh-python debhelper devscripts dput software-properties-common \
+            python3-distutils python3-setuptools python3-wheel python3-stdeb
+        sudo apt-get install libgirepository1.0-dev gcc libcairo2-dev pkg-config gir1.2-gtk-3.0 --yes
+        python3 -m pip install --upgrade pip
+        # python -m pip install wheel
+        python3 -m pip install flake8 pytest
+        # python -m pip install rpm alien
+        sudo python3 -m pip install pyinstaller
+        python3 -m pip install PyGObject
+        if [ -f requirements.txt ]; then python3 -m pip install -r requirements.txt; fi
 
     - name: Lint with flake8
       run: |
@@ -47,19 +48,30 @@ jobs:
     #    pytest confix.py
     - name: Create package
       run: |
-        # sudo alien
-        python build.py
-        ls -lR ./ > lsdebian.txt
-        python setup.py --command-packages=stdeb.command bdist_deb
+        python3 build.py
+        find . -iname *.pyc -delete
+        python3 setup.py --command-packages=stdeb.command bdist_deb
 
-    - name: builds 1
+    - name: builds
       uses: actions/upload-artifact@v2
       with:
-        name: builds1
-        path: dist
+        name: PyInstaller Archive
+        path: dist/pyinstaller-*.zip
+
+    - name: source
+      uses: actions/upload-artifact@v2
+      with:
+        name: Source Packages
+        path: dist/confix-*.tar.gz
+
+    - name: rpm
+      uses: actions/upload-artifact@v2
+      with:
+        name: RPM Packages
+        path: dist/confix-*.rpm
 
     - name: deb
       uses: actions/upload-artifact@v2
       with:
-        name: deb
-        path: lsdebian.txt
+        name: Debian Packages
+        path: deb_dist/python3-confix_*.deb
