--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pyaes==1.6.1
-requests==2.22.0
+python3-pyaes==1.6.1
+python3-requests==2.22.0
 #urrlib3==1.25.3
-tldextract==2.2.2
+python3-tldextract==2.2.2
 pytz>=2020.1
-python-dateutil==2.8.1
-tzlocal==2.1
+python3-dateutil==2.8.1
+python3-tzlocal==2.1
