--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-python3-pyaes==1.6.1
-python3-requests==2.22.0
-#urrlib3==1.25.3
-python3-tldextract==2.2.2
+pyaes==1.6.1
+requests==2.22.0
+tldextract==2.2.2
 pytz>=2020.1
-python3-dateutil==2.8.1
-python3-tzlocal==2.1
+dateutil==2.8.1
+tzlocal==2.1
+
+#python3-pyaes
+#python3-requests
+#python3-tldextract
+#pytz>=2020.1
+#python3-dateutil
+#python3-tzlocal
