--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,8 @@ jobs:
       run: |
         sudo apt install -y python3 python3-dev python3-pip python3-venv python3-all \
             dh-python debhelper devscripts dput software-properties-common \
-            python3-distutils python3-setuptools python3-wheel python3-stdeb
+            python3-distutils python3-setuptools python3-wheel python3-stdeb \
+            python3-requests-file
         sudo apt-get install libgirepository1.0-dev gcc libcairo2-dev pkg-config gir1.2-gtk-3.0 --yes
         python3 -m pip install --upgrade pip
         # python -m pip install wheel
