--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,3 +1,4 @@
 [DEFAULT]
-Depends3: python3-gi, python3-gi-cairo, python3-cairo, gir1.2-gtk-3.0, python3-requests, python3-dateutil, python3-tzlocal, python3-requests-file
-#, python3-tldextract, python3-pyaes Not present in Debian
+Depends3: python3-gi, python3-gi-cairo, python3-cairo, gir1.2-gtk-3.0, python3-requests, python3-dateutil, python3-tzlocal
+
+#, python3-requests-file, python3-tldextract, python3-pyaes Not present in Debian
